# zbc

./: .gitignore  GNUmakefile  LICENSE  README.md  flake.nix  hie.yaml  zigbee-commander.cabal
examples/: halloween.yml  initialize.yml
src/lib/Network/XXX/ZigBee/Commander/: Address.hs  Command.hs  CommandTable.hs  Config.hs  Device.hs  Event.hs  GPIO.hs  Local.hs  Node.hs  NodeTable.hs
src/lib/Network/XXX/ZigBee/Commander/Internal/: Commander.hs  Dispatch.hs  Environment.hs  Main.hs  Network.hs  Ops.hs  Resolve.hs  Serial.hs  State.hs  Util.hs
