--------------------------------------------------------------------------------
name:          zigbee-commander
version:       0.1.0.0
synopsis:      Control and monitor a network of ZigBee radios.
homepage:      http://github.com/pjones/zbc
bug-reports:   http://github.com/pjones/zbc/issues
license:       BSD2
license-file:  LICENSE
author:        Peter Jones <pjones@devalot.com>
maintainer:    Peter Jones <pjones@devalot.com>
copyright:     Copyright (c) 2015 Peter Jones
category:      Network
stability:     experimental
tested-with:   GHC == 7.8.4, GHC == 7.10.2
build-type:    Simple
cabal-version: >=1.10
description:
  FIXME

--------------------------------------------------------------------------------
extra-source-files:
  CHANGES
  README.md
  TODO.org

--------------------------------------------------------------------------------
source-repository head
  type: git
  location: git://github.com/pjones/zbc.git

--------------------------------------------------------------------------------
flag maintainer
  description: Enable settings for the package maintainer.
  manual: True
  default: False

--------------------------------------------------------------------------------
library
  exposed-modules:
    Network.XXX.ZigBee.Commander.Address
    Network.XXX.ZigBee.Commander.Command
    Network.XXX.ZigBee.Commander.CommandTable
    Network.XXX.ZigBee.Commander.Config
    Network.XXX.ZigBee.Commander.Event
    Network.XXX.ZigBee.Commander.GPIO
    Network.XXX.ZigBee.Commander.Internal.Commander
    Network.XXX.ZigBee.Commander.Internal.Main
    Network.XXX.ZigBee.Commander.Internal.Serial
    Network.XXX.ZigBee.Commander.Internal.State
    Network.XXX.ZigBee.Commander.Internal.Util
    Network.XXX.ZigBee.Commander.Node
    Network.XXX.ZigBee.Commander.NodeTable
    Network.XXX.ZigBee.Commander.Internal.Resolve

  other-modules:

  hs-source-dirs: src/lib
  default-language: Haskell2010

  if flag(maintainer)
    ghc-options: -Werror
    ghc-options: -Wall -fwarn-incomplete-uni-patterns
    ghc-prof-options: -prof -auto-all

  build-depends: aeson                >= 0.8   && < 0.10
               , async                >= 2.0   && < 2.1
               , base                 >= 4.6   && < 5.0
               , bytestring           >= 0.10  && < 0.11
               , containers           >= 0.5   && < 0.6
               , either               >= 4.3   && < 4.5
               , filepath             >= 1.3   && < 1.5
               , mtl                  >= 2.1   && < 2.3
               , optparse-applicative >= 0.11  && < 0.12
               , parsec               >= 3.1   && < 3.2
               , process              >= 1.1   && < 1.3
               , serialport           >= 0.4   && < 0.5
               , temporary            >= 1.1   && < 1.3
               , text                 >= 0.11  && < 1.3
               , time                 >= 1.5   && < 1.6
               , transformers         >= 0.3   && < 0.5
               , vector               >= 0.10  && < 0.11
               , yaml                 >= 0.8   && < 0.9
               , zigbee-znet25        >= 0.1   && < 0.2

--------------------------------------------------------------------------------
executable zbc
  default-language: Haskell2010
  main-is: src/bin/zbc.hs
  build-depends: base, zigbee-commander
  ghc-options: -Wall -fwarn-incomplete-uni-patterns -threaded

  if flag(maintainer)
    ghc-options: -Werror
