cabal-version:      2.4
name:               zigbee-commander
version:            0.1.0.0
synopsis:           Control and monitor a network of ZigBee radios.
homepage:           http://github.com/pjones/zbc
bug-reports:        http://github.com/pjones/zbc/issues
license:            BSD-2-Clause
license-file:       LICENSE
author:             Peter J. Jones <pjones@devalot.com>
maintainer:         Peter J. Jones <pjones@devalot.com>
copyright:          Copyright (c) 2015-2022 Peter J. Jones
category:           Network
stability:          experimental
build-type:         Simple
description:        FIXME

--------------------------------------------------------------------------------
extra-source-files:
  CHANGES
  README.md
  TODO.org

--------------------------------------------------------------------------------
source-repository head
  type:     git
  location: git://github.com/pjones/zbc.git

--------------------------------------------------------------------------------
flag maintainer
  description: Enable settings for the package maintainer.
  manual:      True
  default:     False

--------------------------------------------------------------------------------
library
  exposed-modules:
    Network.XXX.ZigBee.Commander.Address
    Network.XXX.ZigBee.Commander.Command
    Network.XXX.ZigBee.Commander.CommandTable
    Network.XXX.ZigBee.Commander.Config
    Network.XXX.ZigBee.Commander.Event
    Network.XXX.ZigBee.Commander.GPIO
    Network.XXX.ZigBee.Commander.Internal.Commander
    Network.XXX.ZigBee.Commander.Internal.Dispatch
    Network.XXX.ZigBee.Commander.Internal.Environment
    Network.XXX.ZigBee.Commander.Internal.Main
    Network.XXX.ZigBee.Commander.Internal.Network
    Network.XXX.ZigBee.Commander.Internal.Ops
    Network.XXX.ZigBee.Commander.Internal.Resolve
    Network.XXX.ZigBee.Commander.Internal.Serial
    Network.XXX.ZigBee.Commander.Internal.State
    Network.XXX.ZigBee.Commander.Internal.Util
    Network.XXX.ZigBee.Commander.Node
    Network.XXX.ZigBee.Commander.NodeTable

  other-modules:
  hs-source-dirs:   src/lib
  default-language: Haskell2010

  if flag(maintainer)
    ghc-options:      -Werror
    ghc-options:      -Wall -fwarn-incomplete-uni-patterns
    ghc-prof-options: -prof -auto-all

  build-depends:
    , aeson                 ^>=2.0
    , async                 ^>=2.2
    , base                  ^>=4.15
    , bytestring            ^>=0.10
    , containers            ^>=0.6
    , directory             ^>=1.3
    , either                ^>=5.0
    , filepath              ^>=1.4
    , mtl                   ^>=2.2
    , network               ^>=3.1
    , optparse-applicative  ^>=0.16
    , parsec                ^>=3.1
    , process               ^>=1.6
    , serialport            ^>=0.4
    , stm                   ^>=2.5
    , temporary             ^>=1.3
    , text                  ^>=1.2
    , time                  ^>=1.9
    , transformers          ^>=0.5
    , vector                ^>=0.12
    , yaml                  ^>=0.11
    , zigbee-znet25         ^>=0.1

--------------------------------------------------------------------------------
executable zbc
  default-language: Haskell2010
  main-is:          src/bin/zbc.hs
  build-depends:
    , base
    , zigbee-commander

  ghc-options:      -Wall -fwarn-incomplete-uni-patterns -threaded

  if flag(maintainer)
    ghc-options: -Werror
